configurable maximum Voltage, working Resistance etc.